--- a/Sis_18/WebContent/estilo.css
+++ b/Sis_18/WebContent/estilo.css
@@ -1,6 +1,7 @@
 
 body{
-	background: url(https://www.lifeofpix.com/wp-content/uploads/2018/08/lake-antholz-fall-1600x2400.jpg) no-repeat center top;
+	/*background: url(https://www.lifeofpix.com/wp-content/uploads/2018/08/lake-antholz-fall-1600x2400.jpg) no-repeat center top;*/
+    background-image: url("https://image.freepik.com/foto-gratis/rock-creek-park_1368-6231.jpg");
 	height: 100%;
 	background-position: center;
     background-repeat: no-repeat;
@@ -30,7 +31,7 @@ body{
 }
 
 .jumbotron {
-    background-image: url("https://cdn.pixabay.com/photo/2015/06/19/21/24/road-815297_960_720.jpg");
+    background-image: url("https://image.freepik.com/foto-gratis/rock-creek-park_1368-6231.jpg");
     background-color: #17234E;
     margin-bottom: 0;`enter code here`
     min-height: 50%;
